--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
 }
 
-/* style navigation mobile */
+/* style navigation*/
 nav {
     font-family: 'Outfit', sans-serif;
     display: flex;
@@ -10,7 +10,7 @@ nav {
     position : fixed;
     width: 100%;
     height: 60px;
-    margin-top: -15px;;
+    margin-top: -15px;
     z-index:1;
 }
   
@@ -78,7 +78,7 @@ ul li a:hover {
     color:white;
 }
 
-/* style navbar desktop */
+/* adding style for navbar desktop */
 @media only screen and (min-width:800px){
     .mobile-nav-hidden {
         display: none;
@@ -167,7 +167,7 @@ h1 {
     z-index: -1;
 }
 
-/* style home desktop */
+/* adding style for home desktop */
 @media only screen and (min-width:800px){
     #home {
         height: 120vh;
@@ -218,7 +218,7 @@ h1 {
     }
 }
 
-/* style about mobile */
+/* style about for mobile */
 #about {
     position: relative;
     font-family: 'Outfit', sans-serif;
@@ -255,7 +255,7 @@ h1 {
 
 
 
-/* style about desktop */
+/* adding style about for desktop */
 @media only screen and (min-width:800px){
     #about {
         position: relative;
@@ -285,7 +285,7 @@ h1 {
 }
 
 
-/* style experience desktop*/
+/* style experience for desktop*/
 #experience {
     margin-left: -10px;
     margin-top: -20px;
@@ -356,7 +356,7 @@ h1 {
     font-size: 1rem;
 }
 
-/* style experience mobile */
+/* adding style experience for mobile */
 @media screen and (max-width: 799px) {
     #experience {
         justify-content: center;
@@ -381,7 +381,7 @@ h1 {
     }
 }
 
-/* style project desktop */
+/* style project for desktop */
 #project {
     padding: 50px 0;
     text-align: center;
@@ -458,7 +458,7 @@ h1 {
     }
 }
 
-/*style project mobile */
+/*adding style project for mobile */
 @media (max-width: 799px) {
     #project {
         padding: 50px 0;
@@ -485,7 +485,7 @@ h1 {
     width: 100%;
 }
 
-/* style contact desktop */
+/* style contact */
 #contact {
     justify-content: center;
     border-top-left-radius: -10px;;
